--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql": "^2.15.0",
     "mysql2": "^1.3.6",
     "passport": "^0.4.0",
-    "sequelize": "^4.3.1"
+    "sequelize": "^4.3.1",
+    "socket.io": "^2.0.4"
   }
 }
